apps/servarr/plex/manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: lscr.io/linuxserver/plex:latest
          environment:
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
            - name: TZ
              value: Europe/Amsterdam
          ports:
            - containerPort: 32400
          volumeMounts:
            - name: config
              mountPath: /config
            - name: movies
              mountPath: /movies
            - name: tv
              mountPath: /tv
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex-config-pvc
        - name: movies
          persistentVolumeClaim:
            claimName: media-sources-pvc
          subPath: movies
        - name: tv
          persistentVolumeClaim:
            claimName: media-sources-pvc
          subPath: tv
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
spec:
  selector:
    app: plex
  ports:
    - port: 32400
      targetPort: 32400
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: plex.apollo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 32400
